<resources>
    <string name="app_name">NEXT2023</string>
    <string name="welcome">반가워요\n주문을 시작할게요</string>
    <string name="next">다음</string>
    <string name="order">주문하기</string>
    <string name="complete_order">주문완료</string>
    <string name="basic">기본</string>
    <string name="hot">HOT</string>
    <string name="ice">ice</string>
    <string name="decaffeine">디카페인</string>
    <string name="caffeine">카페인</string>
    <string name="water_ice">얼음</string>
    <string name="little">적게</string>
    <string name="normal">보통</string>
    <string name="large">많이</string>
</resources>